--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.0)
 
 project(boost_graph)
 
-add_executable(boost_graph main.cpp)
+find_package(Boost 1.45.0 COMPONENTS graph) 
 
-install(TARGETS boost_graph RUNTIME DESTINATION bin)
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS}) 
+    add_executable(${PROJECT_NAME} main.cpp)
+    target_link_libraries(${PROJECT_NAME} Boost::graph)
+endif()
