In fase di costruzione.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,9 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.4)
 
 project(boost_graph)
 
-find_package(Boost 1.45.0 COMPONENTS graph) 
+#find_package(Boost 1.45.0 COMPONENTS graph) 
 
-if(Boost_FOUND)
-    include_directories(${Boost_INCLUDE_DIRS}) 
-    add_executable(${PROJECT_NAME} main.cpp)
-    target_link_libraries(${PROJECT_NAME} Boost::graph)
-endif()
+add_executable(${PROJECT_NAME} main.cpp)
+
+#target_link_libraries(${PROJECT_NAME} libboost_graph.so)
