--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(boost_graph)
 
 #find_package(Boost 1.45.0 COMPONENTS graph) 
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} main.cpp edge.cpp graph.cpp)
 
 #target_link_libraries(${PROJECT_NAME} libboost_graph.so)
